--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/LBN.png" />
+    <link rel="icon" type="image/png" href="./src/assets/images/LBN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> LBN KEY RESOURCE (PVT) LTD</title>
   </head>
